--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: chipenrich
 Type: Package
 Title: Gene Set Enrichment For ChIP-seq Peak Data
-Version: 2.23.0
-Date: 2021-03-26
+Version: 2.23.1
+Date: 2023-03-29
 Authors@R: c(
 	person(c("Ryan","P."),"Welch",role = c("aut","cph"),email = "welchr@umich.edu"),
 	person("Chee","Lee",role = c("aut"),email = "cheelee@umich.edu"),
@@ -25,7 +25,7 @@ Imports: AnnotationDbi, BiocGenerics, chipenrich.data, GenomeInfoDb,
 Suggests: BiocStyle, devtools, knitr, rmarkdown, roxygen2, testthat
 Depends: R (>= 3.4.0)
 LazyLoad: yes
-Maintainer: Raymond G. Cavalcante <rcavalca@umich.edu>
+Maintainer: Kai Wang <wangdaha@umich.edu>
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
 Collate:
